[package]
name = "gavin-rust-blog-os"
version = "0.1.0"
edition = "2024"

[[bin]]
# Disable test and bench targets since these bring in the std libs.
# Rust-analyzer pulls from this target listing
name = "gavin-rust-blog-os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

# Needed to initialize some static members with non-const initializers
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
