[package]
name = "gavin-rust-blog-os"
version = "0.1.0"
edition = "2024"

[[bin]]
# Disable the bench target since it brings in the std libs. Rust-analyzer pulls
# from this target listing
name = "gavin-rust-blog-os"
test = true
bench = false

# Disable the test harness for should_panic, since we can only panic once...
[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

# Needed to initialize some static members with non-const initializers
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# Open a port at 0xf4 of size 0x04 bytes to allow for a 'debug exit' from Qemu.
# This is needed to exit in testing mode, allowing us to bypass needing to do a
# proper ACPI power down. Aditionally, we send serial output to stdio since we
# print test information to stdio. We finally hide the Qemu window during
# testing.
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
# Exit code 0x10 is passed on success, and Qemu morphs it like this:
# (0x10 << 1) | 1 = 0x21 = 33
test-success-exit-code = 33
test-timeout = 300 # 300 seconds = 5 min
